--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 		<!-- Header -->
 			<header id="header">
-				<nav>
+				<!-- <nav>
 					<ul>
 						<li><a href="#menu">Menu</a></li>
 					</ul>
-				</nav>
+				</nav> -->
 			</header>
 
 		<!-- Menu -->
-			<nav id="menu">
+			<!-- <nav id="menu">
 				<h2>Menu</h2>
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
@@ -31,7 +31,7 @@
 					<li><a href="#" class="button fit primary">Get Started</a></li>
 					<li><a href="#" class="button fit">Log In</a></li>
 				</ul>
-			</nav>
+			</nav> -->
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -44,13 +44,13 @@
 							<div class="content">
 								<header>
 									<h1>Hi, I'm <br> Scott Burton</h1>
-									<p>Web Developer<br />
+									<p>Full Stack Web Developer<br />
 									Geospatial Analyst<br />
 									Cartographer</p>
 								</header>
 								<footer>
 									<ul class="actions">
-										<li><a href="#footer" class="button big">What can I do for you?</a></li>
+										<li><a href="#footer" class="button big">Let's Connect!</a></li>
 									</ul>
 								</footer>
 							</div>
@@ -62,8 +62,9 @@
 						<div class="inner">
 							<header>
 								<h2>About</h2>
-								<p>Rutrum facilisis. Class aptent taciti sociosqu<br />
-								litora torquent et conubia etiam nostra.</p>
+								<p> Full Stack Developer<br />
+								Experienced in HTML, CSS, Javascript<br />
+								Let's build you a website!</p>
 							</header>
 							<ul class="icons major style2">
 								<li><span class="icon solid fa-code"><span class="label">Lorem</span></span></li><li>
@@ -72,12 +73,12 @@
 								<span class="icon solid fa-camera-retro"><span class="label">Feugiat</span></span></li><li>
 								<span class="icon solid fa-briefcase"><span class="label">Tempus</span></span></li>
 							</ul>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos malesuada fames ac turpis egestas. In non lorem amet. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique eu nibh.</p>
+							<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos malesuada fames ac turpis egestas. In non lorem amet. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique eu nibh.</p>
 							<footer>
 								<ul class="actions special">
 									<li><a href="#" class="button">Details</a></li>
 								</ul>
-							</footer>
+							</footer> -->
 						</div>
 					</section>
 
@@ -85,17 +86,17 @@
 					<section class="wrapper style1 special">
 						<div class="inner">
 							<header>
-								<h2>Duis torquent</h2>
-								<p>Rutrum facilisis. Class aptent taciti sociosqu<br />
-								litora torquent et conubia etiam nostra.</p>
+								<h2>Projects</h2>
+								<p>These are some project that I will soon place<br />
+								They're gonna be so dope just wait.</p>
 							</header>
 							<section class="spotlight">
 								<span class="image"><img src="images/pic02.jpg" alt="" /></span>
 								<div class="content">
 									<header>
-										<h3>Aliquam veroeros</h3>
+										<h3>Project 1</h3>
 									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos magna fames ac turpis egestas amet non lorem amet.</p>
+									<p>Vinyl try-hard humblebrag actually, forage portland ethical taxidermy pork belly. Vice adaptogen aesthetic vape. Chambray bespoke mixtape cold-pressed etsy kombucha, shaman wolf.</p>
 									<footer>
 										<ul class="actions">
 											<li><a href="#" class="button">Details</a></li>
@@ -107,9 +108,9 @@
 								<span class="image"><img src="images/pic03.jpg" alt="" /></span>
 								<div class="content">
 									<header>
-										<h3>Nostra adpiscing</h3>
+										<h3>Project 2</h3>
 									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos magna fames ac turpis egestas amet non lorem amet.</p>
+									<p>Axe pug 3 wolf moon squid blog edison bulb. Gluten-free photo booth unicorn tacos you probably haven't heard of them truffaut fixie ethical tofu narwhal thundercats man braid 3 wolf moon palo santo dreamcatcher. </p>
 									<footer>
 										<ul class="actions">
 											<li><a href="#" class="button">Details</a></li>
@@ -121,9 +122,9 @@
 								<span class="image"><img src="images/pic04.jpg" alt="" /></span>
 								<div class="content">
 									<header>
-										<h3>Tempus litoria</h3>
+										<h3>Project 3</h3>
 									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos magna fames ac turpis egestas amet non lorem amet.</p>
+									<p>Flexitarian letterpress shaman artisan, affogato art party selvage poutine. Unicorn health goth yuccie post-ironic letterpress, shoreditch farm-to-table keffiyeh.</p>
 									<footer>
 										<ul class="actions">
 											<li><a href="#" class="button">Details</a></li>
@@ -131,12 +132,6 @@
 									</footer>
 								</div>
 							</section>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos malesuada fames ac turpis egestas. In non lorem amet. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique eu nibh.</p>
-							<footer>
-								<ul class="actions special">
-									<li><a href="#" class="button">Details</a></li>
-								</ul>
-							</footer>
 						</div>
 					</section>
 
@@ -144,7 +139,7 @@
 					<section class="wrapper style3 special">
 						<div class="inner">
 							<header>
-								<h2>Amet ullamcorper</h2>
+								<h2>Local to you</h2>
 								<p>Aptent taciti sociosqu litora torquent et conubia sed etiam.<br />
 								Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam<br />
 								turpis mauris, ultricies erat malesuada quis.</p>
@@ -173,7 +168,7 @@
 								</ul>
 							</section>
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="mailto:burtonsb@gmail.com" enctype="multipart/form-data" name="EmailForm">
 									<div class="fields">
 										<div class="field half"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="field half"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -186,7 +181,7 @@
 							</section>
 						</div>
 						<div class="copyright">
-							<p>&copy; Untitled. All rights reserved. Lorem ipsum dolor sit amet nullam.</p>
+							<p>&copy; Scott Burton. All rights reserved.</p>
 						</div>
 					</section>
 
