--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 		<title>Scott</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<script src="https://kit.fontawesome.com/6a940b9bde.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/collapse.css" />
 	</head>
 	<body class="is-preload">
 
@@ -42,7 +44,7 @@
 						<div class="inner">
 							<span class="image"><img src="images/profilepic" alt="" /></span>
 							<div class="content">
-								<header>
+								<header class="shadowed">
 									<h1>Hi, I'm <br> Scott Burton</h1>
 									<p>Full Stack Web Developer<br />
 									Geospatial Analyst<br />
@@ -67,11 +69,11 @@
 								Let's build you a website!</p>
 							</header>
 							<ul class="icons major style2">
-								<li><span class="icon solid fa-code"><span class="label">Lorem</span></span></li><li>
-								<span class="icon solid fa-cog"><span class="label">Ipsum</span></span></li><li>
-								<span class="icon solid fa-gem"><span class="label">Dolor</span></span></li><li>
-								<span class="icon solid fa-camera-retro"><span class="label">Feugiat</span></span></li><li>
-								<span class="icon solid fa-briefcase"><span class="label">Tempus</span></span></li>
+								<li><span class="icon solid fa-camera-retro"><span class="label">Lorem</span></span></li>
+								<li><span class="icon solid fa-globe-americas"><span class="label">Ipsum</span></span></li>
+								<li><span class="icon solid fa-code"><span class="label">Dolor</span></span></li>
+								<li><span class="icon solid fa-cog"><span class="label">Feugiat</span></span></li>
+								<li><span class="icon solid fa-drafting-compass"><span class="label">Tempus</span></span></li>
 							</ul>
 							<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos malesuada fames ac turpis egestas. In non lorem amet. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique eu nibh.</p>
 							<footer>
@@ -83,55 +85,57 @@
 					</section>
 
 				<!-- Two -->
-					<section class="wrapper style1 special">
+					<section class="wrapper style1 special ">
 						<div class="inner">
-							<header>
+							<header class="collapsible">
 								<h2>Projects</h2>
 								<p>These are some project that I will soon place<br />
 								They're gonna be so dope just wait.</p>
 							</header>
-							<section class="spotlight">
-								<span class="image"><img src="images/pic02.jpg" alt="" /></span>
-								<div class="content">
-									<header>
-										<h3>Project 1</h3>
-									</header>
-									<p>Vinyl try-hard humblebrag actually, forage portland ethical taxidermy pork belly. Vice adaptogen aesthetic vape. Chambray bespoke mixtape cold-pressed etsy kombucha, shaman wolf.</p>
-									<footer>
-										<ul class="actions">
-											<li><a href="#" class="button">Details</a></li>
-										</ul>
-									</footer>
-								</div>
-							</section>
-							<section class="spotlight">
-								<span class="image"><img src="images/pic03.jpg" alt="" /></span>
-								<div class="content">
-									<header>
-										<h3>Project 2</h3>
-									</header>
-									<p>Axe pug 3 wolf moon squid blog edison bulb. Gluten-free photo booth unicorn tacos you probably haven't heard of them truffaut fixie ethical tofu narwhal thundercats man braid 3 wolf moon palo santo dreamcatcher. </p>
-									<footer>
-										<ul class="actions">
-											<li><a href="#" class="button">Details</a></li>
-										</ul>
-									</footer>
-								</div>
-							</section>
-							<section class="spotlight">
-								<span class="image"><img src="images/pic04.jpg" alt="" /></span>
-								<div class="content">
-									<header>
-										<h3>Project 3</h3>
-									</header>
-									<p>Flexitarian letterpress shaman artisan, affogato art party selvage poutine. Unicorn health goth yuccie post-ironic letterpress, shoreditch farm-to-table keffiyeh.</p>
-									<footer>
-										<ul class="actions">
-											<li><a href="#" class="button">Details</a></li>
-										</ul>
-									</footer>
-								</div>
-							</section>
+							<div class="collapsible">
+								<section class="spotlight ">
+									<span class="image"><img src="images/pic02.jpg" alt="" /></span>
+									<div class="content">
+										<header>
+											<h3>Project 1</h3>
+										</header>
+										<p>Vinyl try-hard humblebrag actually, forage portland ethical taxidermy pork belly. Vice adaptogen aesthetic vape. Chambray bespoke mixtape cold-pressed etsy kombucha, shaman wolf.</p>
+										<footer>
+											<ul class="actions">
+												<li><a href="#" class="button">Details</a></li>
+											</ul>
+										</footer>
+									</div>
+								</section>
+								<section class="spotlight ">
+									<span class="image"><img src="images/pic03.jpg" alt="" /></span>
+									<div class="content">
+										<header>
+											<h3>Project 2</h3>
+										</header>
+										<p>Axe pug 3 wolf moon squid blog edison bulb. Gluten-free photo booth unicorn tacos you probably haven't heard of them truffaut fixie ethical tofu narwhal thundercats man braid 3 wolf moon palo santo dreamcatcher. </p>
+										<footer>
+											<ul class="actions">
+												<li><a href="#" class="button">Details</a></li>
+											</ul>
+										</footer>
+									</div>
+								</section>
+								<section class="spotlight">
+									<span class="image"><img src="images/pic04.jpg" alt="" /></span>
+									<div class="content">
+										<header>
+											<h3>Project 3</h3>
+										</header>
+										<p>Flexitarian letterpress shaman artisan, affogato art party selvage poutine. Unicorn health goth yuccie post-ironic letterpress, shoreditch farm-to-table keffiyeh.</p>
+										<footer>
+											<ul class="actions">
+												<li><a href="#" class="button">Details</a></li>
+											</ul>
+										</footer>
+									</div>
+								</section>
+							</div>
 						</div>
 					</section>
 
@@ -161,10 +165,12 @@
 								</header>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos magna fames ac turpis egestas amet non lorem amet.</p>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/sbburton/" class="icon brands fa-linkedin"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/klrqn" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/sbburton" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.instagram.com/klrqn/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.tiktok.com/@sctbrtn" class="icon brands fa-tiktok"><span class="label">Snapchat</span></a></li>
+
 								</ul>
 							</section>
 							<section>
@@ -181,7 +187,7 @@
 							</section>
 						</div>
 						<div class="copyright">
-							<p>&copy; Scott Burton. All rights reserved.</p>
+							<p>&copy;2022 Scott Burton. All rights reserved.</p>
 						</div>
 					</section>
 
