fixed connect button and text-shadow

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="inner">
 							<span class="image"><img src="images/profilepic" alt="" /></span>
 							<div class="content">
-								<header class="shadowed">
+								<header>
 									<h1>Hi, I'm <br> Scott Burton</h1>
 									<p>Full Stack Web Developer<br />
 									Geospatial Analyst<br />
