--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 							<div class="content">
 								<header>
 									<h1>Hi, I'm <br> Scott Burton</h1>
-									<p>Full Stack Web Developer<br />
-									Geospatial Analyst<br />
-									Cartographer</p>
+									<!-- <p>I'd like to build<br />
+									you a website<br /> -->
+									</p>
 								</header>
 								<footer>
 									<ul class="actions">
@@ -64,9 +64,10 @@
 						<div class="inner">
 							<header>
 								<h2>About</h2>
-								<p> Full Stack Developer<br />
-								Experienced in HTML, CSS, Javascript<br />
-								Let's build you a website!</p>
+								<p> I'm a Full Stack Developer<br />
+								Using HTML, CSS, Javascript<br />
+								Photography and Design<br />
+							</p>
 							</header>
 							<ul class="icons major style2">
 								<li><span class="icon solid fa-camera-retro"><span class="label">Lorem</span></span></li>
@@ -88,11 +89,11 @@
 					<section class="wrapper style1 special ">
 						<div class="inner">
 							<header class="collapsible">
-								<h2>Projects</h2>
-								<p>These are some project that I will soon place<br />
-								They're gonna be so dope just wait.</p>
+								<h2 class="expand-projects">Projects</h2>
+								<p>Previous Clients<br />
+								and Designs</p>
 							</header>
-							<div class="collapsible">
+							<div class="" id="project-showcase">
 								<section class="spotlight ">
 									<span class="image"><img src="images/pic02.jpg" alt="" /></span>
 									<div class="content">
