--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Scott</title>
+		<title>Scott Burton Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<script src="https://kit.fontawesome.com/6a940b9bde.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> 
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/collapse.css" />
 	</head>
@@ -97,7 +97,7 @@
 							<div id="project-showcase">
 								<section 	class="spotlight" 	
 											data-aos="fade-up-left" 
-											data-aos-duration="3000"
+											data-aos-duration="4000"
 											data-aos-easing="ease-in-out">
 									<span class="image"><img src="images/bridge1.jpg" alt="" /></span>
 									<div class="content">
@@ -107,7 +107,7 @@
 										<p>Vinyl try-hard humblebrag actually, forage portland ethical taxidermy pork belly. Vice adaptogen aesthetic vape. Chambray bespoke mixtape cold-pressed etsy kombucha, shaman wolf.</p>
 									</div>
 								</section>
-								<section class="spotlight" data-aos="fade-up-right" data-aos-duration="2500" data-aos-easing="ease-in-out">
+								<section class="spotlight" data-aos="fade-up-right" data-aos-duration="4000" data-aos-easing="ease-in-out">
 									<span class="image"><img src="images/arch2.jpg" alt="" /></span>
 									<div class="content">
 										<header>
@@ -116,7 +116,7 @@
 										<p>Axe pug 3 wolf moon squid blog edison bulb. Gluten-free photo booth unicorn tacos you probably haven't heard of them truffaut fixie ethical tofu narwhal thundercats man braid 3 wolf moon palo santo dreamcatcher. </p>
 									</div>
 								</section>
-								<section class="spotlight" data-aos="fade-up-left" data-aos-duration="2000" data-aos-easing="ease-in-out">
+								<section class="spotlight" data-aos="fade-up-left" data-aos-duration="4000" data-aos-easing="ease-in-out">
 									<span class="image"><img src="images/solar3.jpg" alt="" /></span>
 									<div class="content">
 										<header>
@@ -164,11 +164,12 @@
 								</ul>
 							</section>
 							<section>
-								<form method="post" action="mailto:burtonsb@gmail.com" enctype="multipart/form-data" name="EmailForm">
+								<form action="https://formsubmit.co/burtonsb@gmail.com" method="POST" >
+									<!-- enctype="multipart/form-data" name="EmailForm" -->
 									<div class="fields">
-										<div class="field half"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="field half"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="field"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+										<div class="field half"><input type="text" name="name" id="name" placeholder="Name" required/></div>
+										<div class="field half"><input type="email" name="email" id="email" placeholder="Email" required/></div>
+										<div class="field"><textarea name="message" id="message" placeholder="Message" rows="4" required></textarea></div>
 									</div>
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" /></li>
