--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
 							<div id="project-showcase">
 								<section 	class="spotlight" 	
 											data-aos="fade-up-left" 
-											data-aos-duration="4000"
-											data-aos-easing="ease-in-out">
+											data-aos-duration="4000">
 									<span class="image"><img src="images/bridge1.jpg" alt="" /></span>
 									<div class="content">
 										<header>
@@ -107,7 +106,7 @@
 										<p>Vinyl try-hard humblebrag actually, forage portland ethical taxidermy pork belly. Vice adaptogen aesthetic vape. Chambray bespoke mixtape cold-pressed etsy kombucha, shaman wolf.</p>
 									</div>
 								</section>
-								<section class="spotlight" data-aos="fade-up-right" data-aos-duration="4000" data-aos-easing="ease-in-out">
+								<section class="spotlight" data-aos="fade-up-right" data-aos-duration="4000">
 									<span class="image"><img src="images/arch2.jpg" alt="" /></span>
 									<div class="content">
 										<header>
@@ -116,7 +115,7 @@
 										<p>Axe pug 3 wolf moon squid blog edison bulb. Gluten-free photo booth unicorn tacos you probably haven't heard of them truffaut fixie ethical tofu narwhal thundercats man braid 3 wolf moon palo santo dreamcatcher. </p>
 									</div>
 								</section>
-								<section class="spotlight" data-aos="fade-up-left" data-aos-duration="4000" data-aos-easing="ease-in-out">
+								<section class="spotlight" data-aos="fade-up-left" data-aos-duration="4000">
 									<span class="image"><img src="images/solar3.jpg" alt="" /></span>
 									<div class="content">
 										<header>
@@ -153,7 +152,7 @@
 								<header>
 									<h3>Contact Me</h3>
 								</header>
-								<p>I would love to hear from you, please reach out with any questions, or just to say 'hey'! I'm open to freelance projects and can work with you to determine scope and scale of your .</p>
+								<p>I would love to hear from you, please reach out with any questions, or just to say 'hey'! I'm open to freelance projects and can work with you to determine scope and scale of your next great idea.</p>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/sbburton/" class="icon brands fa-linkedin"><span class="label">GitHub</span></a></li>
 									<li><a href="https://github.com/klrqn" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
